[metadata]
name = lpc
version = 0.0.1
author = Ryan Helminen
author_email = finyoop@protonmail.com
description = Light Placer LED Controller Client
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
	click >= 7.0
	pyserial >= 3.5

[options.entry_points]
console_scripts =
    lpc = lpc.client:cli